fixing whitespace

--- a/homepage.css
+++ b/homepage.css
@@ -1,10 +1,10 @@
 *{
 border: 1px solid red;
 }
+
 body{
 padding: 0;
 margin: 0;
-bottom: 0px;
 height: 100%;
 }
 
